# Pytorch-UNet

./: .gitignore  Dockerfile  README.md  crf.py  data_vis.py  dice_loss.py  eval.py  evaluate.py  hubconf.py  load.py  loader.py  main.py  myloss.py  predict.py  requirements.txt  scaleInvarLoss.py  submit.py  train.py  unet_model.py  unet_parts.py  utils.py  训练模型.ipynb
.github/workflows/: main.yml
bladder_data/: mask_gif_generator.py
data/masks/: rename.py
msnhnet/: ReadMe.md
msnhnet/cpp_project/: CMakeLists.txt  unet_gpu.cpp
msnhnet/cpp_project/ReadMe/: ReadMe.Md
msnhnet/tools/: MsnhBuilder.py  PytorchToMsnhnet.py  ReadMe.md  Unet2Msnhnet.py
scripts/: download_data.bat  download_data.sh
sin_uso/: dice_loss.py  eval.py  requirements.txt
sin_uso/utils/: data_vis.py  utils.py
unet/: USM.py  __init__.py  unet_model.py  unet_model_4layer.py  unet_parts.py
utils/: __init__.py  crf.py  data_loading.py  data_vis.py  dataset.py  dice_score.py  load.py  utils.py
